--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,5 @@
-// $Swiss721BT: 'Swiss721BT', sans-serif;
-// $HelveticaNeueLTPro: 'HelveticaNeueLTPro', sans-serif;
-// $OpenSans: 'Open Sans', sans-serif;
-// $Sylfaen: 'Sylfaen', sans-serif;
+$Arial: 'Arial', sans-serif;
+$MyriadPro: 'MyriadPro', sans-serif;
+$Swiss721BT: 'Swiss721BT', sans-serif;
+$HelveticaNeueLTPro: 'HelveticaNeueLTPro', sans-serif;
+$OpenSans: 'Open Sans', sans-serif;
