--- a/sass/_about-us-page.scss
+++ b/sass/_about-us-page.scss
@@ -16,34 +16,37 @@
 }
 
 .about-page-preffoter {
-
-	background: url("../images/special-offers-bg.jpg") no-repeat;
-	background-size: cover;
+	background-image: url("../images/policy-bg.jpg");
+	background-repeat: no-repeat;
 	background-position: center;
+	background-size: cover;
 
 	.preffoter-content-bg {
-		max-width: 977px;
+		max-width: 930px;
 		margin: 0 auto;
 		padding-top: 20px;
 		overflow: hidden;
 		position: relative;
 		padding-bottom: 35px;
-		background: rgba(0, 0, 0, 0.4);
 
 		.title {
 			margin: 20px 0 15px;
-			color: #fff;
+			color: #000000;
 			font: 400 25px / 27px $Arial;
 		}
 
-		p {
-			margin: 0 0 15px 0;
-			text-align: justify;
-			color: #fff;
-			font: 400 18px / 22px $Arial;
+		.for-about-description {
+			overflow: hidden;
+			.edit-description {
+				float: right;
+			}
 
-			&.desctop {
-				display: none;
+			p {
+				clear: both;
+				margin: 0 0 15px 0;
+				text-align: justify;
+				color: #000000;
+				font: 400 18px / 22px $Arial;
 			}
 		}
 
@@ -61,7 +64,7 @@
 				top: 50%;
 				transform: translateY(-50%);
 				z-index: 2;
-				background: rgba(199,102,102, 0.8);
+				background: rgba(54,54,54, 0.8);
 				cursor: pointer;
 
 				img {
@@ -113,6 +116,16 @@
 						-webkit-transform: translate(-50%, -50%);
 						-ms-transform: translate(-50%, -50%);
 						transform: translate(-50%, -50%);
+					}
+
+					.edit-img {
+						position: absolute;
+						top: 10px;
+						display: block;
+						right: 20px;
+						z-index: 3;
+						width: 30px;
+						height: 30px;
 					}
 				}
 			}
