--- a/sass/_home-page.scss
+++ b/sass/_home-page.scss
@@ -2,655 +2,320 @@
 .type-nav {
 	position: relative;
 	
-	.full-img {
-		position: relative;
-		width: 100%;
-		min-height: 100%;
-		height: 530px;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: -webkit-flex;
-		display: flex;
-		-webkit-box-pack: center;
-		-ms-flex-pack: center;
-		-webkit-justify-content: center;
-		justify-content: center;
-		-webkit-box-align: center;
-		-ms-flex-align: center;
-		-webkit-align-items: center;
-		align-items: center;
-		overflow: hidden;
-
-		.full-width-img {
-			min-height: auto;
-			height: 100%;
-			min-width: auto;
-			max-width: none;
-			width: auto;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			-webkit-transform: translate(-50%, -50%);
-			-ms-transform: translate(-50%, -50%);
-			transform: translate(-50%, -50%);
-		}
-	}
 	.desctop-block {
 		display: none;
 	}
 
 	.under-content {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 2;
-		padding-top: 26px;
 
 		.navigation-menu {
 			@include border-box;
 			margin: 0 auto;
 			text-align: center;
 
-			li {
+			& > li {
 				display: block;
-				margin: 10px auto;
+				margin: 5px auto;
 				text-align: left;
-				padding: 20px 0 20px 25px;
-				background: rgba(0, 0, 0, 0.7);
+				padding: 9px 0 9px 25px;
+				background: rgba(0, 0, 0, 0.4);
+
+				&.desctop {
+					display: none;
+				}
+
+				&.more-menu {
+					position: relative;
+
+					.icon-more {
+						float: right;
+						width: 15px;
+						height: 15px;
+						background: #fff;
+						margin: 5px 25px 0 10px;
+						text-align: center;
+
+						.fa {
+							font-size: 29px;
+							line-height: 15px;
+							float: left;
+							font-weight: 500;
+							text-align: center;
+						}
+
+						.fa-angle-right {
+							color: rgba(0, 0, 0, 0.4);
+							margin: -1px 0 0 3px;
+						}
+					}
+
+					.more-active {
+						background: #c76666;
+						.fa-angle-down {
+							margin: 0;
+							font-size: 25px;
+							color: #fff;
+						}
+					}
+
+					.submenu {
+						position: absolute;
+						display: none;
+						width: 320px;
+						margin: 0;	
+
+						&.visible {
+							display: block;
+							top: 42px;
+							right: 0;
+							padding-top: 8px;
+							z-index: 2;
+							background: rgba(0, 0, 0, 0.9);
+						}
+
+
+						li {
+							display: block;
+							margin: 5px 0;
+							text-align: right;
+
+							a {
+								display: block;
+								width: 100%;
+								height: 100%;
+								position: relative;
+								padding: 9px 15px 9px 25px;
+								color: #fff;
+								font: 400 18px / 25px $Arial;
+								text-transform: uppercase;
+								@include transition;
+								@include border-box;
+
+								&:hover {
+									color: #c76666;
+									background: rgba(0, 0, 0, 0.7);
+								}
+							}
+
+							/*.submenu-item-active {
+								color: #c76666;
+								background: rgba(0, 0, 0, 0.7);
+								}*/
+							}
+						}
+					}
+				}
 
 				a {
-					color: white;
-					font: 600 30px / 32px $MyriadPro;
+					color: #ffffff;
+					font: 700 24px / 26px $Arial;
+					text-transform: uppercase;
 				}
 			}
 
-			.more-menu {
+
+		}
+	}
+	/*END SECTION TYPE NAV*/
+	/*SERVICES SECTION*/
+	.services-section {
+		background-image: url("../images/product-bg.jpg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+		border-bottom: 7px solid #ffffff;
+
+		.special-offers-desctop,
+		.services-list,
+		.list-of-qualities {
+			display: none;
+		}
+
+		.special-offers-section {
+			.title-block {
+				width: 100%;
+				overflow: hidden;
+				margin: 0 auto;
+				padding: 25px 0;
+				text-align: center;
+				background: #f3f3f3;
+				position: relative;
+
+				.title {
+					display: inline-block;
+					color: #969696;
+					font: 700 25px / 26px $Arial;
+				}
+				.edit-title {
+					display: inline-block;
+					margin: 0 0 0 10px;
+				}
+			}
+
+			.special-offers-slider {
+				margin: 20px auto;
+				overflow: hidden;
+
+				* {
+					outline: none;
+				}
+
+				.slider-item {
+					position: relative;
+					@include transition;
+					margin-right: 20px;
+
+
+
+					.img-wrapper {
+						width: 227px;
+						height: 304px;
+						position: relative;
+						overflow: hidden;
+
+						img {
+							width: auto;
+							height: 100%;
+						}
+						.edit-big {
+							position: absolute;
+							top: 10px;
+							right: 15px;
+							z-index: 2;
+						}
+
+
+						.item-title {
+							width: 100%;
+							position: absolute;
+							left: 0;
+							bottom: 0;
+							padding: 15px 0 14px;
+							background: rgba(0, 0, 0, 0.6);
+							text-align: center;
+							margin: 0 auto;
+							overflow: hidden;
+
+							span {
+								color: white;
+								font: 700 13px / 15px $Arial;
+							}
+
+							.edit-title {
+								float: right;
+								margin: 0 5px 0 0;
+								display: none;
+							}
+						}
+					}
+
+					.price-block {
+						overflow: hidden;
+						margin: 0 auto;
+						padding: 8px 0 7px;
+						text-align: center;
+						background-color: #979797;
+						color: #fff;
+						font-family: "Arial", sans-serif;
+						font-weight: 400;
+
+						.dollar,
+						.sub-price {
+							font-size: 11px;
+						}
+
+						.main-price {
+							font-size: 17px;
+						}
+
+						.edit-title {
+							float: right;
+							margin: 0 5px 0 0;
+							display: none;
+						}
+					}
+				}
+			}
+		}
+	}
+	/*END SERVICES SECTION*/
+	/*PREFFOTER SECTION*/
+	.preffoter-section {
+		position: relative;
+		background-image: url("../images/welcome-bg.jpg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+		overflow: hidden;
+
+		.welcome-title {
+			overflow: hidden;
+			margin: 27px auto 18px;
+			text-align: center;
+			span {
+				color: #5a5a5a;
+				font: 700 30px / 30px $Arial;
+			}
+			.edit-title {
+				float: right;
+			}
+		}
+
+		.for-edit-cotent {
+			overflow: hidden;
+			.edit-title {
+				float: right;
+			}
+			p {
+				clear: both;
+				margin: 0 auto 20px;
+				color: #5a5a5a;
+				font: 400 18px / 22px $Arial;
+				text-align: justify;
+				word-break: break-word;
+			}
+		}
+
+		.for-seo-toolbar {
+			margin: 20px auto 45px;
+			.seo-toolbar-title {
+				margin: 0 auto;
+				text-align: center;
+				color: #0c0c0c;
+				font: 400 26px / 28px $Arial;
+			}
+
+			.seo-toolbar-list {
+				margin: 0 auto;
+				text-align: center;
+
+				li {
+					display: block;
+					margin: 25px auto;
+
+					a {
+						width: auto;
+						padding: 8px 15px;
+						color: #ffffff;
+						font: 400 16px / 22px $Arial;
+						border-radius: 4px;
+						border: 1px solid #723b0b;
+						background-image: linear-gradient(to top, #b54209 0%, #f36e16 100%);
+					}
+				}
+			}
+		}
+
+		.position-block {
+			position: relative;
+			background: rgba(0, 0, 0, 0.8);
+			overflow: hidden;
+			display: none;
+
+			.footer-main-menu,
+			.footer-services-menu {
 				display: none;
 			}
 		}
 	}
-}
-/*END SECTION TYPE NAV*/
-/*SERVICES SECTION*/
-.services-section {
-	background: url("../images/special-offers-bg.jpg") no-repeat;
-	background-position: center center;
-	background-size: cover;
-	border-bottom: 7px solid #c66666;
-
-	.special-offers-desctop,
-	.services-list,
-	.list-of-qualities {
-		display: none;
-	}
-
-	.special-offers-section {
-		.title-block {
-			width: 100%;
-			overflow: hidden;
-			margin: 0 auto;
-			padding: 11px 0 9px;
-			text-align: center;
-			background: #fafafa;
-			position: relative;
-
-			.title {
-				color: #c76666;
-				font: 700 25px / 26px $Arial;
-			}
-		}
-
-		.special-offers-slider {
-			margin: 20px auto;
-			overflow: hidden;
-
-			* {
-				outline: none;
-			}
-
-			.slider-item {
-				position: relative;
-				@include transition;
-				margin-right: 20px;
-
-				/*-------------------------*/
-				@-webkit-keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				@-moz-keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				@-o-keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				@keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				/*-------------------------*/
-				@-webkit-keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				@-moz-keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				@-o-keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				@keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				/*-------------------------*/
-
-				@-webkit-keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-				@-moz-keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-				@-o-keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-				@keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-
-				&:hover {
-					.img-wrapper {
-						.overflow-block {
-							display: block;
-
-							.hulf-block-bg {
-								animation: hulf-block-animation 1s linear;
-								-webkit-animation-duration: 1s;
-								animation-duration: 1s;
-								animation-fill-mode: forwards;
-								animation-direction: normal;
-
-								.view {
-									animation: hulf-block-animation 1s linear;
-									-webkit-animation-duration: 1s;
-									animation-duration: 1s;
-									animation-fill-mode: forwards;
-									animation-direction: normal;
-								}
-							}
-
-							.card-block {
-								animation: card-block-animation 0.85s linear;
-								-webkit-animation-duration: 0.85s;
-								animation-duration: 0.85s;
-								animation-fill-mode: forwards;
-								animation-direction: normal;
-							}
-						}
-					}
-				}
-
-				.img-wrapper {
-					width: 227px;
-					height: 304px;
-					position: relative;
-					overflow: hidden;
-
-					img {
-						width: auto;
-						height: 100%;
-					}
-
-					.overflow-block {
-						display: none;
-						position: absolute;
-						overflow: hidden;
-						top: 0;
-						left: 0;
-						width: 100%;
-						height: 86%;
-						z-index: 2;
-						@include transition;
-						
-						.hulf-block-bg {
-							float: left;
-							width: 60%;
-							height: 100%;
-							position: relative;
-							left: -100%;
-							background: rgba(199,102,102, 0.8);
-
-							.view {
-								position: relative;
-								display: block;
-								left: -100%;
-								width: 62px;
-								height: 100%;
-								float: right;
-								color: white;
-								font: 700 20px / 22px $Arial;
-								@include transition;
-								cursor: pointer;
-								background: rgba(0, 0, 0, 0.3);
-
-								span {
-									position: absolute;
-									top: 50%;
-									right: 5px;
-									transform: translateY(-50%);
-									display: block;
-									width: 42px;
-									height: 34px;
-									padding-top: 8px;
-
-									img {
-										position: absolute;
-										z-index: 3;
-										top: 50%;
-										left: 50%;
-										transform: translate(-50%, -50%);
-										opacity: 0;
-										display: block;
-										padding-right: 12px;
-									}
-
-									&:hover {
-
-										span {
-											opacity: 0;
-										}
-
-										img {
-											opacity: 1;
-										}
-									}
-								}
-							}
-						}
-
-						.card-block {
-							float: right;
-							width: 40%;
-							height: 100%;
-							background: rgba(228,228,228, 0.8);
-							position: relative;
-							right: -100%;
-							@include transition;
-
-							&:hover {
-								background: rgba(204,204,204, 0.8);
-
-								a {
-									color: #fff;
-								}
-							}
-
-							a {
-								position: absolute;
-								top: 50%;
-								right: 2px;
-								text-align: center;
-								transform: translateY(-50%);
-								color: #828282;
-								font: 400 18px / 22px $Arial;
-								@include transition;
-
-								span {
-
-									img {
-										position: absolute;
-										z-index: 3;
-										top: 50%;
-										left: 50%;
-										transform: translate(-50%, -50%);
-										opacity: 0;
-										width: 62px;
-										height: 54px;
-									}
-
-									&:hover {
-
-										& > span {
-											opacity: 0;
-										}
-
-										img {
-											opacity: 1;
-										}
-									}
-								}
-							}
-						}
-
-					}
-
-					.item-title {
-						width: 100%;
-						position: absolute;
-						left: 0;
-						bottom: 0;
-						padding: 15px 0 14px;
-						background: rgba(0, 0, 0, 0.6);
-						text-align: center;
-						margin: 0 auto;
-
-						color: white;
-						font: 700 13px / 15px $Arial;
-					}
-				}
-
-				.price-block {
-					margin: 0 auto;
-					padding: 8px 0 7px;
-					text-align: center;
-					background: #c66666;
-					color: #fff;
-					font-family: "Arial", sans-serif;
-					font-weight: 400;
-					
-					.dollar,
-					.sub-price {
-						font-size: 11px;
-					}
-
-					.main-price {
-						font-size: 17px;
-					}
-				}
-			}
-		}
-	}
-}
-/*END SERVICES SECTION*/
-/*PREFFOTER SECTION*/
-.preffoter-section {
-	position: relative;
-	background: url("../images/preffoter-bg.jpg") no-repeat;
-	background-position: center center;
-	background-size: cover;
-	overflow: hidden;
-
-	.welcome-title {
-		margin: 27px auto 18px;
-		text-align: center;
-		color: #5a5a5a;
-		font: 700 30px / 30px $Arial;
-	}
-
-	p {
-		margin: 0 auto 20px;
-		color: #5a5a5a;
-		font: 400 18px / 22px $Arial;
-		text-align: justify;
-		word-break: break-word;
-	}
-
-	.position-block {
-		position: relative;
-		background: rgba(0, 0, 0, 0.8);
-		overflow: hidden;
-
-		.footer-main-menu,
-		.footer-services-menu {
-			display: none;
-		}
-
-		.footer-main-menu,
-		.footer-services-menu,
-		.question-form {
-			@include border-box;
-
-			.block-title {
-				margin: 16px 0 14px;
-				color: #d0d0d0;
-				font: 400 22px / 25px $Arial;
-			}
-
-			#name,
-			#email,
-			#message-field {
-				@include border-box;
-				width: 100%;
-				margin: 0 auto;
-				background: rgba(255, 255, 255, 0.1);
-				outline: none;
-				resize: none;
-				border: none;
-
-				color: #e5e5e5;
-				font: 400 15px / 25px $Arial;
-			}
-
-			#name,
-			#email {
-				height: 33px;
-				padding: 0 0 0 9px;
-			}
-
-			#email {
-				margin: 7px auto;
-			}
-
-			#message-field {
-				height: 65px;
-				padding: 0 0 0 9px;
-			}
-
-			#send-btn {
-				display: block;
-				margin: 22px auto 20px;
-				text-align: center;
-				color: #fff;
-				font: 700 18px / 25px $Arial;
-				text-transform: uppercase;
-
-				background: transparent;
-				border: none;
-				outline: none;
-				cursor: pointer;
-			}
-		}
-
-		.mobile-block {
-			padding: 11px 0 9px;
-			overflow: hidden;
-			background: rgba(199,102,102, 0.5);
-
-			
-
-			.social-icon-mobile {
-				margin: 8px auto 0;
-				overflow: hidden;
-				text-align: center;
-
-				li {
-					display: inline-block;
-					margin: 8px 20px 0;
-					
-					.fa {
-						display: block;
-						color: #dedede;
-						font-size: 19px;
-						@include transition;
-					}
-
-					&:hover {
-						.fa {
-							color: #000;
-						}
-					}
-				}
-			}
-
-
-
-			/*For top btn*/
-
-			#go-top {
-				float: right;
-			}
-			.cd-top {
-				display: inline-block;
-				height: 38px;
-				width: 40px;
-				position: fixed;
-				bottom: 25px;
-				right: 10px;
-				box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-				overflow: hidden;
-				white-space: nowrap;
-				visibility: hidden;
-				opacity: 0;
-				text-align: center;
-				-webkit-transition: opacity .3s 0s, visibility 0s .3s;
-				-moz-transition: opacity .3s 0s, visibility 0s .3s;
-				transition: opacity .3s 0s, visibility 0s .3s;
-			}
-			.cd-top .fa {
-				color: #fff;
-				font-size: 60px;
-				text-align: center;
-				line-height: 30px;
-			}
-			.cd-top.cd-is-visible, .cd-top.cd-fade-out, .no-touch .cd-top:hover {
-				-webkit-transition: opacity .3s 0s, visibility 0s 0s;
-				-moz-transition: opacity .3s 0s, visibility 0s 0s;
-				transition: opacity .3s 0s, visibility 0s 0s;
-			}
-			.cd-top.cd-is-visible {
-				/* the button becomes visible */
-				visibility: visible;
-				opacity: 1;
-				z-index: 99999;
-			}
-			@media only screen and (min-width: 768px) {
-				.cd-top {
-					right: 20px;
-					bottom: 20px;
-				}
-
-				.cd-top .fa {
-					font-size: 70px;
-					line-height: 30px;
-				}
-			}
-			@media only screen and (min-width: 1024px) {
-				.cd-top {
-					height: 38px;
-					width: 49px;
-					right: 100px;
-					bottom: 60px;
-				}
-			}
-			.labels {
-				color: red;
-				background-color: transparent;
-				font-family: "Lucida Grande", "Arial", sans-serif;
-				font-size: 10px;
-				font-weight: bold;
-				text-align: center;
-				width: 100px;
-				border: 0;
-			}
-		}
-	}
-}
 /*END PREFFOTER SECTION*/
