--- a/sass/_list-of-products.scss
+++ b/sass/_list-of-products.scss
@@ -1,5 +1,5 @@
 .type-nav-product-page {
-	height: 140px;
+	height: auto;
 	overflow: hidden;
 
 	.full-img {
@@ -13,6 +13,10 @@
 .page-of-products {
 	border: none;
 	padding: 0;
+	background-image: url("../images/gray-pages-bg.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 
 	.special-offers-desctop {
 		display: block;
@@ -47,174 +51,6 @@
 					display: none;
 				}
 
-				/*-------------------------*/
-				@-webkit-keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				@-moz-keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				@-o-keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				@keyframes card-block-animation {
-					0% {
-						right: -100%;
-					}
-					50% {
-						right: -50%;
-					}
-					100% {
-						right: 0;
-					}
-				}
-				/*-------------------------*/
-				@-webkit-keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				@-moz-keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				@-o-keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				@keyframes hulf-block-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 0;
-					}
-				}
-				/*-------------------------*/
-
-				@-webkit-keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-				@-moz-keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-				@-o-keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-				@keyframes view-animation {
-					0% {
-						left: -100%;
-					}
-					50% {
-						left: -50%;
-					}
-					100% {
-						left: 100%;
-					}
-				}
-
-				&:hover {
-					.img-wrapper {
-						.overflow-block {
-							display: block;
-
-							.hulf-block-bg {
-								animation: hulf-block-animation 1s linear;
-								-webkit-animation-duration: 1s;
-								animation-duration: 1s;
-								animation-fill-mode: forwards;
-								animation-direction: normal;
-
-								.view {
-									animation: hulf-block-animation 1s linear;
-									-webkit-animation-duration: 1s;
-									animation-duration: 1s;
-									animation-fill-mode: forwards;
-									animation-direction: normal;
-								}
-							}
-
-							.card-block {
-								animation: card-block-animation 0.85s linear;
-								-webkit-animation-duration: 0.85s;
-								animation-duration: 0.85s;
-								animation-fill-mode: forwards;
-								animation-direction: normal;
-							}
-						}
-					}
-				}
 
 				.img-wrapper {
 					width: 158px;
@@ -230,127 +66,13 @@
 						text-align: center;
 					}
 
-					.overflow-block {
-						display: none;
+					.edit-big {
 						position: absolute;
-						overflow: hidden;
-						top: 0;
-						left: 0;
-						width: 100%;
-						height: 79.5%;
+						top: 10px;
+						right: 15px;
 						z-index: 2;
-						@include transition;
-
-						.hulf-block-bg {
-							float: left;
-							width: 60%;
-							height: 100%;
-							position: relative;
-							left: -100%;
-							background: rgba(199,102,102, 0.8);
-
-							.view {
-								position: relative;
-								display: block;
-								left: -100%;
-								width: 62px;
-								height: 100%;
-								float: right;
-								color: white;
-								font: 700 20px / 22px $Arial;
-								@include transition;
-								cursor: pointer;
-								background-color: rgba(0, 0, 0, 0.3);
-
-								span {
-									position: absolute;
-									top: 50%;
-									right: 5px;
-									transform: translateY(-50%);
-									display: block;
-									width: 42px;
-									height: 34px;
-
-									img {
-										position: absolute;
-										z-index: 3;
-										top: 50%;
-										left: 50%;
-										transform: translate(-50%, -50%);
-										opacity: 0;
-										display: block;
-									}
-
-									&:hover {
-
-										span {
-											opacity: 0;
-										}
-
-										img {
-											opacity: 1;
-										}
-									}
-								}
-							}
-						}
-
-						.card-block {
-							float: right;
-							width: 40%;
-							height: 100%;
-							background: rgba(228,228,228, 0.8);
-							position: relative;
-							right: -100%;
-							@include transition;
-
-							&:hover {
-								background: rgba(204,204,204, 0.8);
-
-								a {
-									color: #fff;
-								}
-							}
-
-							a {
-								position: absolute;
-								top: 50%;
-								right: 0;
-								display: block;
-								width: 100%;
-								text-align: center;
-								transform: translateY(-50%);
-								color: #828282;
-								font: 400 18px / 22px $Arial;
-								@include transition;
-								span {
-
-									img {
-										position: absolute;
-										z-index: 3;
-										top: 50%;
-										left: 50%;
-										transform: translate(-50%, -50%);
-										opacity: 0;
-										width: 62px;
-										height: 54px;
-									}
-
-									&:hover {
-
-										& > span {
-											opacity: 0;
-										}
-
-										img {
-											opacity: 1;
-										}
-									}
-								}
-							}
-						}
-
 					}
+
 
 					.item-title {
 						width: 100%;
@@ -392,7 +114,7 @@
 			display: block;
 			margin: 20px auto;
 			text-align: center;
-			color: #fff;
+			color: #d55910;
 			font: 700 18px / 22px $Arial;
 			text-transform: uppercase;
 		}
