--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -65,6 +65,7 @@ h1 {
   cursor: pointer;
   z-index: 100;
   transition: opacity .25s ease;
+  display: none;
   
   &:hover {
     opacity: .7;
@@ -136,16 +137,6 @@ h1 {
     height: 100%;
     height: auto;
 
-    &:before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 35px;
-      top: 44px;
-      left: 0;
-      background: #d9d9d9;
-      z-index: 2;
-    }
     
     li {
       animation: fadeInRight .5s ease forwards;
