--- a/sass/_polices.scss
+++ b/sass/_polices.scss
@@ -1,5 +1,5 @@
 .type-nav-polices {
-	height: 140px;
+	height: auto;
 	overflow: hidden;
 	.full-img {
 		height: 280px;
@@ -16,32 +16,42 @@
 }
 
 .polices-preffoter {
-	background: url("../images/special-offers-bg.jpg") no-repeat;
-	background-size: cover;
+	background-image: url("../images/policy-bg.jpg");
+	background-repeat: no-repeat;
 	background-position: center;
+	background-size: cover;
 
 	.preffoter-content-bg {
-		max-width: 977px;
+		max-width: 930px;
 		margin: 0 auto;
 		overflow: hidden;
 		position: relative;
 		padding-bottom: 35px;
-		background: rgba(0, 0, 0, 0.4);
 
-		.title {
-			margin: 20px 0 15px;
-			color: #fff;
-			font: 400 25px / 27px $Arial;
+		.for-policy-title {
+
+			.title {
+				display: inline-block;
+				margin: 20px 0 15px;
+				color: #000000;
+				font: 400 25px / 27px $Arial;
+			}
+			.edit-title {
+				display: inline-block;
+				margin: 0 0 0 10px;
+			}
 		}
-
-		p {
-			margin: 0 0 15px 0;
-			text-align: justify;
-			color: #fff;
-			font: 400 18px / 22px $Arial;
-
-			&.desctop {
-				display: none;
+		.for-policy-desciption {
+			overflow: hidden;
+			.edit-description {
+				float: right;
+			}	
+			p {
+				clear: both;
+				margin: 0 0 15px 0;
+				text-align: justify;
+				color: #000000;
+				font: 400 18px / 22px $Arial;
 			}
 		}
 	}
