--- a/sass/main-styles.scss
+++ b/sass/main-styles.scss
@@ -14,63 +14,12 @@ License URI: LICENSE
 --------------------------------------------------------------*/
 @import "compass/reset";
 
-/*--------------------------------------------------------------
-# scss files
---------------------------------------------------------------*/
 @import "variables";
 @import "mixins";
 	/*--------------------------------------------------------------
 	# fonts
 	--------------------------------------------------------------*/
 	@import "fonts";
-	/*--------------------------------------------------------------
-	# mobile menu
-	--------------------------------------------------------------*/
-	@import "menu";
-	/*--------------------------------------------------------------
-	# header
-	--------------------------------------------------------------*/
-	@import "header";
-	/*--------------------------------------------------------------
-	# footer
-	--------------------------------------------------------------*/
-	@import "footer";
-	/*--------------------------------------------------------------
-	# login page
-	--------------------------------------------------------------*/
-	@import "login";
-	/*--------------------------------------------------------------
-	# home page
-	--------------------------------------------------------------*/
-	@import "home-page";
-	/*--------------------------------------------------------------
-	# policew
-	--------------------------------------------------------------*/
-	@import "polices";
-	/*--------------------------------------------------------------
-	# list of products
-	--------------------------------------------------------------*/
-	@import "list-of-products";
-	/*--------------------------------------------------------------
-	# about us page
-	--------------------------------------------------------------*/
-	@import "about-us-page";
-	/*--------------------------------------------------------------
-	# single page of product
-	--------------------------------------------------------------*/
-	@import "single-page-of-product";
-	/*--------------------------------------------------------------
-	# cart
-	--------------------------------------------------------------*/
-	@import "cart";
-	/*--------------------------------------------------------------
-	# contact us page
-	--------------------------------------------------------------*/
-	@import "contact-us-page";
-	/*--------------------------------------------------------------
-	# media styles
-	--------------------------------------------------------------*/
-	@import "media";
 
 /*--------------------------------------------------------------
 # General styles
@@ -81,14 +30,11 @@ body {
 	font-weight: 400;
 	font-size: 16px;
 	-webkit-font-smoothing: antialiased;
-	background: #fff;
+	background-image: url("../images/gray-pages-bg.jpg");
+	background-repeat: no-repeat;
+	background-position: right bottom;
+	background-size: cover;
 }
-
-$Arial: 'Arial', sans-serif;
-$MyriadPro: 'MyriadPro', sans-serif;
-$Swiss721BT: 'Swiss721BT', sans-serif;
-$HelveticaNeueLTPro: 'HelveticaNeueLTPro', sans-serif;
-
 
 
 .wrapper {
@@ -143,3 +89,76 @@ a {
 	cursor: pointer;
 	z-index: 99999;
 }
+
+.edit,
+.edit-title,
+.edit-big, 
+.edit-icon {
+	img {
+		filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale"); /* Firefox 10+, Firefox on Android */
+		filter: gray; /* IE6-9 */
+		-webkit-filter: grayscale(100%) brightness(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+		@include transition;
+
+		&:hover {
+			filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale");
+			-webkit-filter: grayscale(0%);
+		}
+	}
+}
+
+/*--------------------------------------------------------------
+# scss files
+--------------------------------------------------------------*/
+	/*--------------------------------------------------------------
+	# mobile menu
+	--------------------------------------------------------------*/
+	@import "menu-mobile";
+	/*--------------------------------------------------------------
+	# desctop menu
+	--------------------------------------------------------------*/
+	@import "menu";
+	/*--------------------------------------------------------------
+	# header
+	--------------------------------------------------------------*/
+	@import "header";
+	/*--------------------------------------------------------------
+	# footer
+	--------------------------------------------------------------*/
+	@import "footer";
+	/*--------------------------------------------------------------
+	# login page
+	--------------------------------------------------------------*/
+	@import "login";
+	/*--------------------------------------------------------------
+	# home page
+	--------------------------------------------------------------*/
+	@import "home-page";
+	/*--------------------------------------------------------------
+	# policew
+	--------------------------------------------------------------*/
+	@import "polices";
+	/*--------------------------------------------------------------
+	# list of products
+	--------------------------------------------------------------*/
+	@import "list-of-products";
+	/*--------------------------------------------------------------
+	# about us page
+	--------------------------------------------------------------*/
+	@import "about-us-page";
+	/*--------------------------------------------------------------
+	# single page of product
+	--------------------------------------------------------------*/
+	@import "single-page-of-products";
+	/*--------------------------------------------------------------
+	# cart
+	--------------------------------------------------------------*/
+	@import "cart";
+	/*--------------------------------------------------------------
+	# contact us page
+	--------------------------------------------------------------*/
+	@import "contact-us-page";
+	/*--------------------------------------------------------------
+	# media styles
+	--------------------------------------------------------------*/
+	@import "media";
