--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -74,8 +74,15 @@
 	/*single product page*/
 	.services-section {
 		&.services-section-single-product-page {
-			.mobile-back-btn {
-				display: none;
+			.special-offers-section {
+				.title-block {
+					.mobile {
+						display: none;
+					}
+					.desctop {
+						display: block;
+					}
+				}
 			}
 		}
 	}
@@ -86,6 +93,7 @@
 				display: block;
 				overflow: hidden;
 				img {
+					display: block;
 					float: left;
 					margin: 4px 0 0 0;
 				}
@@ -97,9 +105,19 @@
 					font: 700 26px / 28px $Arial;
 				}
 			}
-			.product-name {
-				margin: 0 auto;
-				text-align: center;
+			.for-product-name-title {
+				.white-edit-title {
+					.white-edit {
+						img {
+							filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale");
+							-webkit-filter: grayscale(0%);
+						}
+					}
+				}
+				.product-name {
+					margin: 0 auto;
+					text-align: center;
+				}
 			}
 
 			.single-product-slider {
@@ -112,16 +130,45 @@
 
 					#thumbnail-slider-prev, 
 					#thumbnail-slider-next {
-						background: rgba(199,102,102, 0.8);
+						height: 15px;
+						line-height: 15px;
+						background: rgba(46,46,46, 0.8);
+
+						&:before {
+							border-width: 1px;
+						}
+					}
+					#thumbnail-slider-prev {
+						&:before {
+							top: 5px
+						}
+					} 
+					#thumbnail-slider-next {
+						:before  {
+							bottom: 5px;
+						}
 					}
 
 					ul {
 						li{
 							&:hover {
-								border-color: rgba(199,102,102, 0.8);
+								border-color: rgba(46,46,46, 0.8);
 							}
 							&.active {
-								border-color: rgba(199,102,102, 0.8);
+								border-color: rgba(46,46,46, 0.8);
+							}
+
+							.edit-thubnail {
+								position: absolute;
+								top: 5px;
+								right: 5px;
+								z-index: 2;
+							}
+
+							&:first-child {
+								.edit-thubnail {
+									top: 25px;
+								}
 							}
 						}
 					}
@@ -741,6 +788,10 @@
 						a {
 							color: #d0d0d0;
 							font: 400 18px / 30px $Arial;
+
+							&.menu-item-active {
+								color: #c76666;
+							}
 						}
 					}
 				}
@@ -944,15 +995,26 @@
 		.preffoter-content-bg {
 			margin: 43px auto 0;
 			padding: 5px 0 6px;
+			border-top: 3px solid #b3b3b3;
+			border-bottom: 3px solid #b3b3b3;
 
-			.product-name {
+			.for-product-name-title {
 				width: 331px;
 				float: right;
-				margin: 22px 0 0;
-				text-align: left;
-				letter-spacing: 1.2px;
-				font-size: 24px;
-				line-height: 28px;
+
+				.product-name {
+					margin: 22px 0 0;
+					text-align: left;
+					letter-spacing: 1.2px;
+					font-size: 24px;
+					line-height: 28px;
+				}
+			}
+
+			.description-product {
+				.for-description {
+					padding-bottom: 40px;
+				}
 			}
 
 			.single-product-slider {
@@ -980,14 +1042,14 @@
 			.navigation {
 				float: right;
 				width: 370px;
-				margin: -459px 0 0;
+				margin: -390px 0 0;
 
 				.wrapper {
 					padding: 0 0 0 15px;
 				}
 
 				.customize-nav {
-					flex-flow: column;
+					width: 330px;
 					.price-block {
 						width: 100%;
 						-moz-box-ordinal-group: 1;
@@ -1140,12 +1202,16 @@
 				text-transform: uppercase;
 			}
 		}
+		.for-seo-toolbar {
+			margin: 65px 0 0 0;
+			padding: 40px 0 35px;
+		}
 	}
 	/*------------------------*/
 	/*single product page*/
 	.type-nav-single-product-page {
 		// height: 340px;
-		height: 206px;
+		height: auto;
 
 		.full-img {
 			.full-width-img {
@@ -1177,184 +1243,81 @@
 	}
 	.cart-preffoter {
 
-		.result-block {
-			margin-right: 30px;
-		}
-		.shop-form {
-			.heading {
-				display: block;
-				overflow: hidden;
-
-				li {
-					float: left;
-					background: #c76666;
-					text-align: center;
-					border-right: 1px solid #fff;
-
-					h3 {
-						margin: 7px auto;
-						text-align: center;
-						color: #fff;
-						font: 700 17px / 19px $Arial;
-						text-transform: uppercase;
-					}
-
-					&:first-child {
-						width: 77px;
-						border-left: 1px solid #fff;
-					}
-
-					&:nth-child(2) {
-						width: 225px;
-					}
-					&:nth-child(3) {
-						width: 160px;
-					}
-					&:nth-child(4) {
-						width: 170px;
-					}
-					&:nth-child(5) {
-						width: 165px;
-					}
-					&:nth-child(6) {
-						width: 106px;
-					}
-				}
-			}
-
-		}
-
 		.product-item {
 			overflow: hidden;
+			display: -webkit-box;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: -moz-flex;
+			display: -webkit-flex;
+			-webkit-flex-wrap: wrap;
+			flex-wrap: wrap;
+			display: flex;
+			justify-content: space-between;
+
 
 			li {
+				max-height: 100%;
 				float: left;
-				display: block;
-				@include border-box;
-				height: 110px;
-				max-height: 110px;
-				overflow: hidden;
-				text-align: center;
-				border-right: 1px solid #fff;
 
-				.mobile {
-					display: none;
-				}
+				.title {
+					border: 0;
+					border-bottom: 2px solid #fff;
 
-				&:first-child {
-					width: 79px;
-					margin: 0;
-					border-left: 1px solid #fff;
-				}
-
-				&:nth-child(2) {
-					width: 226px;
-					padding-top: 13px;
-
-					.name {
-						text-align: left;
-						margin-left: 15px;
-					}
-
-				}
-				&:nth-child(3) {
-					width: 161px;
-					padding-top: 13px;
-
-					.count {
-						display: block;
-						width: 51px;
-						height: 19px;
-						margin: 0 auto;
-						text-align: center;
-						line-height: 20px;
-						background: #4f4b4b;
-					}
-					
-					.update-btn {
-						display: block;
-						margin: 12px auto 0;
-						text-align: center;
+					.head {
+						font-size: 14px;
+						line-height: 17px;
 					}
 				}
-				&:nth-child(4) {
-					width: 171px;
-					padding-top: 13px;
-				}
-				&:nth-child(5) {
-					width: 166px;
-					padding-top: 13px;
-				}
-				&:nth-child(6) {
-					width: 100px;
-					margin: 0;
-					a {
-						.remove-img {
-							display: block;
-							margin: 40px auto 0;
-							text-align: center;
-						}
 
-						.mobile-img {
-							display: none;
-						}
-					}
+				.content {
+					min-height: 60px;
+					max-height: 60px;
 				}
 			}
+			.product-number,
+			.product-date,
 			.product-name,
-			.product-quantity,
-			.product-unit-price,
-			.product-total-price {
-				.count,
-				.price,
-				.total-price {
-					color: #fff;
+			.product-email {
+				.title {
+					width: 100%;
+					float: initial;
 				}
 			}
-		}
-		.navigation-btn-block {
-			overflow: hidden;
-			margin: 20px auto 0;
-			padding: 13px 0;
-			background: rgba(0, 0, 0, 0.4);
-			border-top: 1px solid rgba(255, 255, 255, 0.3);
-			border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-			position: relative;
-
-			&:after {
-				content: "";
-				position: absolute;
-				top: 0;
-				right: -80px;
-				width: 140px;
-				height: 100%;
-				z-index: 0;
-				background: -prefix-linear-gradient(left, rgba(255,255,255,0.5),
-					rgba(255,255,255,0.003));
-
-				background: linear-gradient(to right, rgba(255,255,255,0.5),
-					rgba(255,255,255,0.003));
-				-webkit-filter: blur(20px);
-				-moz-filter: blur(20px);
-				-o-filter: blur(20px);
-				-ms-filter: blur(20px);
-				filter: blur(20px);
-
-			} 
-
-			.for-checkout,
-			.for-continue-shoping {
-
-				overflow: hidden;
-				padding: 0;
-				background: none;
-				position: initial;
-				border: none;
-				float: right;
-
+			.product-number {
+				width: 50px;
+				text-align: center;
 			}
-			.for-checkout {
-				margin: 0 50px 0 77px;
+			.product-date {
+				width: 100px;
+			}
+			.product-name {
+				width: 185px;
+			}
+			.product-email {
+				width: 315px;
+			}
+
+			.product-quantity,
+			.product-total-price,
+			.product-pdf-file {
+				.title {
+					width: 100%;
+					float: initial;
+				}
+			}
+			.product-quantity {
+				width: 100px;
+				text-align: center;
+			}
+			
+			.product-total-price {
+				width: 120px;
+				text-align: center;
+			}
+			.product-pdf-file {
+				width: 110px;
+				text-align: center;
 			}
 		}
 	}
