--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -180,8 +180,8 @@ h1 {
   nav {
     float: right;
     width: 281px;
-    height: 480px;
-    padding: 40px 0 20px;
+    height: auto;
+    padding: 40px 0 40px;
     position: relative;
     top: 44px;
     right: 0;
