--- a/sass/_single-page-of-products.scss
+++ b/sass/_single-page-of-products.scss
@@ -125,7 +125,8 @@
 
 			.add-more {
 				display: block;
-				margin: 20px 0 40px 15px;
+				float: right;
+				margin: 15px 25px 40px 15px;
 				color: #d15610;
 				font: 700 25px / 28px $Arial;
 			}
@@ -195,11 +196,101 @@
 					}
 				}
 			}
+		}
 
+		.choose-category-block {
+			clear: both;
+			padding: 0 15px;
+
+			.ui.selection.dropdown {
+				max-width: 340px;
+				width: 100%;
+				margin: 10px auto;
+				background: transparent;
+				box-shadow: none;
+				border: 1px solid rgba(209,86,16,1);
+				border-radius: 0;
+				padding: .4em 2.1em .5em 1em;
+			}
+			.ui.dropdown>.text {
+				margin: 0 40px 0 0;
+				color: #b6b6b6;
+				font: 400 25px / 28px $Arial;
+			}
+			.ui.selection.dropdown>.dropdown.icon {
+				font-size: 2em;
+				padding: .1em;
+				color: #d15610;
+			}
+			.ui.selection.active.dropdown .menu {
+				border-color: rgba(209,86,16,1);
+				box-shadow: none;
+				background-color: #363636;
+			}
+			.ui.selection.dropdown .menu>.item {
+				color: #b6b6b6;
+				font-family: $Arial;
+			}
+		}
+
+		#add-category {
+			float: right;
+			display: block;
+			margin: 0 0 30px 0;
+			color: #d15610;
+			font: 700 25px / 28px $Arial;
+			cursor: pointer;
+		}
+
+		.special-offers-product {
+			clear: both;
+			margin: 0 0 35px;
+			padding: 0 15px;
+
+
+			label {
+				display: block;
+				overflow: hidden;
+				color: #ffffff;
+				font: 400 20px / 22px $Arial;
+				cursor: pointer;
+
+				label {
+					overflow: initial;
+					display: inline;
+				}
+			}
+
+			#spec-offers {
+				display: none;
+			}
+			.spec-offers-checkbox-custom {
+				position: relative;
+				display: block;
+				float: left;
+				width: 23px;
+				height: 23px;
+				margin: 0 20px 0 0;
+				border: 3px solid #d15610;
+				background-color: #ffffff;
+				cursor: pointer;
+			}
+			#spec-offers:checked + .spec-offers-checkbox-custom::before {
+				content: "";             
+				display: block;          
+				position: absolute;      
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 9px;
+				height: 9px;
+				background: #d15610;     
+			}
 		}
 
 		.description-product {
-
+			clear: both;
+			overflow: hidden;
 			.for-title {
 				overflow: hidden;
 
